--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <p>
           BestMan_Pybullet is a simulation platform for mobile manipulators (featuring a wheeled base and robotic arm) built on PyBullet. It offers unified hardware APIs to streamline development and experimentation.
         </p>
-        <a href="https://www.bestmansim.com">Learn More</a>
+        <a href="https://bestmansim.com/">Learn More</a>
       </div>
     </div>
 
@@ -114,7 +114,7 @@
         <p>
           FastUMI is a scalable, hardware-independent universal manipulation interface designed to facilitate real-world data collection and accelerate research.
         </p>
-        <a href="www.fastumi.com">Learn More</a>
+        <a href="https://fastumi.com/">Learn More</a>
       </div>
     </div>
 
